heatmaply 1.4.3 (2023-07-11)
===============

## OTHER NOTES

- `width` and `height` arguments now control the size of the output plots, to some extent at least.
- Improved error message when using `scale` argument with zero variance rows/columns.

heatmaply 1.4.2 (2023-01-06)
===============

## BUGFIX
- Fix transpose issue when using scatter mode with `plot_method="plotly"`.


heatmaply 1.4.1 (2022-11-12)
===============

## BUGFIX
- Fix "keep annotation names without adding dots" issue #281. Props to @colejohanson.

heatmaply 1.4.0 (2022-10-08)
===============
## OTHER NOTES
- added github actions

## BUGFIX
- Add label_format_fun to plotly heatmap mode
- hoverinfo now works correctly when cellnote is displayed; see issue #76.
For example, run:
```
library("heatmaply")
heatmaply(mtcars, draw_cellnote = TRUE)
```
You can see that now the hover info is properly displayed.


heatmaply 1.3.0 (2021-10-09)
===============
## NEW FEATURE
- ggheatmap now accepts `hide_colorbar` argument. Also, when `row_dend_left`
is set to `TRUE`, the subplot widths are correctly reversed. (Credit jaehyunjoo,
PR #273)

## BUGFIX
- Fix bug with handling of point size matrix in plotly
  See github issue #266

## OTHER NOTES
- Changed order of hovertext when plot_method="plotly" to match ggplot equivalent
- update startup message to include stackoverflow.
- add github actions (GHA)
- minor fixes to doc so to release to CRAN.

heatmaply 1.2.1 (2021-02-02)
===============
## BUGFIX
- heatmaply wasn't printing properly in rmarkdown. Reverted back the new print method, and now it's working fine (but we get back the warning message from issue #226: https://github.com/talgalili/heatmaply/issues/226  )
- added warning = FALSE to vignette, to make it cleaner.


heatmaply 1.2.0 (2021-01-29)
===============
## BUGFIX
- Fix incorrect use of distfun_row and hclustfun_row #254
- remove d3heatmap links from Rd